--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -1,32 +1,34 @@
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 320px) {
     .header {
         width: 100%;
         display: flex;
         padding: 10px 0;
-
         .logo {
             width: 50%;
-            height: 90px;
+            height: 110px;
             background-image: url(../../public/logo-01.jpg);
             background-repeat: no-repeat;
             background-size: 200px;
             background-position: center;
         }
-        .navigation {
+        .btnMenu {
             width: 50%;
             height: 110px;
             background: #fff;
-            background-image: url(../../public/menu-01.png);
+            background-image: url(../../public/menu-02.png);
             background-repeat: no-repeat;
-            background-size: 30px;
+            background-size: 20px;
             background-position-x: 90%;
             background-position-y: center;
+        }
+        .navigation {
+            display: none;
         }
         .menu {
             position: absolute;
             top: 130px;
             width: 100%;
-            display: block;
+            display: none;
             background: #f4f4f4;
             padding: 10px;
             cursor: pointer;
@@ -40,6 +42,38 @@
                     margin: 10px 0;
                 }
             }
+        }
+    }
+}
+@media screen and (min-width: 768px) {
+    .header {
+        .logo {
+            width: 30%;
+        }
+        .btnMenu {
+            display: none;
+        }
+        .navigation {
+            display: flex;
+            width: 70%;
+            height: 110px;
+            background: #fff;
+            ul {
+                width: 100%;
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                text-align: center;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                li {
+                    margin: 10px 0;
+                }
+            }
+        }
+        .menu {
+            display: none !important;
         }
     }
 }
