--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -5,15 +5,17 @@
         padding: 10px 0;
         .logo {
             width: 50%;
-            height: 110px;
-            background-image: url(../../public/logo-01.jpg);
-            background-repeat: no-repeat;
-            background-size: 200px;
-            background-position: center;
+            height: 70px;
+            img{
+                width:160px;
+                height:60px;
+                margin:5px 0 0 0;
+                padding: 0 10px
+            }
         }
         .btnMenu {
             width: 50%;
-            height: 110px;
+            height: 70px;
             background: #fff;
             background-image: url(../../public/menu-02.png);
             background-repeat: no-repeat;
@@ -26,7 +28,7 @@
         }
         .menu {
             position: absolute;
-            top: 130px;
+            top: 90px;
             width: 100%;
             display: none;
             background: #f4f4f4;
@@ -40,6 +42,7 @@
 
                 li {
                     margin: 10px 0;
+                    text-transform: uppercase;
                 }
             }
         }
@@ -56,7 +59,7 @@
         .navigation {
             display: flex;
             width: 70%;
-            height: 110px;
+            height: 70px;
             background: #fff;
             ul {
                 width: 100%;
@@ -69,6 +72,7 @@
                 align-items: center;
                 li {
                     margin: 10px 0;
+                    text-transform: uppercase;
                 }
             }
         }
