--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 320px) {
     .section {
         width: 100%;
-        height: calc(100vh - 110px);
+        height: calc(100vh - 260px);
         background-image: url(../../public/background-03.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -36,5 +36,10 @@
 @media screen and (min-width: 768px) {
     .section {
         width: 100%;
+        .title {
+            span {
+                font-size: 60px;
+            }
+        }
     }
 }
