--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -1,6 +1,40 @@
-.card {
-    width: 100px;
-    height: 70px;
-    background-color: #000;
-    margin: 3px;
+@media screen and (min-width: 320px) {
+    .cardModel01 {
+        width: 100px;
+        height: 70px;
+        margin: 3px;
+        img {
+            width: 100px;
+            height: 70px;
+            opacity: 0.3;
+            transition: 0.4s;
+            &:hover {
+                opacity: 1;
+                transition: 0.4s;
+            }
+        }
+    }
+
+    .cardModel02 {
+        width: calc(100% - 40px);
+        margin: 10px;
+        padding: 30px;
+        text-align: center;
+        border: 1px solid #e5e5e5;
+        border-radius: 5px;
+        .iconImage {
+            img {
+                width: 50px;
+                height: 50px;
+            }
+        }
+        .description {
+            text-align: center;
+        }
+    }
+}
+@media screen and (min-width: 768px) {
+    .cardModel02 {
+        width: calc(50% - 20px);
+    }
 }
