--- a/components/section03/style.module.scss
+++ b/components/section03/style.module.scss
@@ -45,6 +45,20 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                input {
+                    width: calc(100% - 20px);
+                    margin: 15px 10px;
+                    height: 50px;
+                    padding: 0 25px;
+                    font-size: 16px;
+                    letter-spacing: 0.04em;
+                    font-weight: 400;
+                    border: none;
+                    border-radius: 25px;
+                    background: transparent;
+                    border: 2px solid #fff;
+                    color: #fff;
+                }
             }
         }
     }
