--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -6,6 +6,7 @@
         flex-direction: column;
         align-items: center;
         position: relative;
+        padding: 0 0 50px 0;
         .title {
             width: calc(100% - 20px);
             font-size: 2rem;
