--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -1,7 +1,6 @@
 @media screen and (min-width: 320px) {
     .section {
         width: 100%;
-        height: calc(100vh - 260px);
         background-image: url(../../public/background-03.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -9,6 +8,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding:0 0 50px 0;
         .title {
             width: 100%;
             font-size: 2rem;
