Centraliado o titulo do footer no mobile

--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -12,6 +12,7 @@
             font-size: 2rem;
             color: #fff;
             margin: 70px 0 0 20px;
+            text-align: center;
         }
         .text {
             width: calc(100% - 40px);
