--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -1,10 +1,10 @@
 @media screen and (min-width: 320px) {
     .cardModel01 {
-        width: 100px;
+        // width: 100px;
         height: 70px;
         margin: 3px;
         img {
-            width: 100px;
+            // width: 100px;
             height: 70px;
             opacity: 0.3;
             transition: 0.4s;
@@ -14,7 +14,6 @@
             }
         }
     }
-
     .cardModel02 {
         width: calc(100% - 40px);
         margin: 10px;
@@ -33,6 +32,7 @@
         }
     }
 }
+
 @media screen and (min-width: 768px) {
     .cardModel02 {
         width: calc(50% - 20px);
