--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -6,10 +6,10 @@
         .logo {
             width: 50%;
             height: 70px;
-            img{
-                width:160px;
-                height:60px;
-                margin:5px 0 0 0;
+            img {
+                width: 160px;
+                height: 60px;
+                margin: 5px 0 0 0;
                 padding: 0 10px
             }
         }
@@ -39,7 +39,6 @@
                 padding: 0;
                 margin: 0;
                 text-align: center;
-
                 li {
                     margin: 10px 0;
                     text-transform: uppercase;
@@ -48,6 +47,7 @@
         }
     }
 }
+
 @media screen and (min-width: 768px) {
     .header {
         .logo {
@@ -73,6 +73,9 @@
                 li {
                     margin: 10px 0;
                     text-transform: uppercase;
+                    & {
+                        cursor: pointer;
+                    }
                 }
             }
         }
