--- a/components/section03/style.module.scss
+++ b/components/section03/style.module.scss
@@ -10,7 +10,8 @@
         align-items: center;
         justify-content: center;
         position: relative;
-        padding:0 0 50px 0;
+        padding: 0 0 50px 0;
+        height: 100vh;
         .divOpacity {
             opacity: 0.65;
             background-color: rgb(17, 17, 17);
@@ -63,6 +64,7 @@
         }
     }
 }
+
 @media screen and (min-width: 768px) {
     .section {
         width: 100%;
