--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -7,9 +7,8 @@
             width: 50%;
             height: 70px;
             img {
-                width: 160px;
-                height: 60px;
-                margin: 5px 0 0 0;
+                width: 150px;
+                margin: 20px 0 0 0;
                 padding: 0 10px
             }
         }
@@ -52,6 +51,11 @@
     .header {
         .logo {
             width: 30%;
+            img {
+                width: 200px;
+                margin: 5px 0 0 0;
+                padding: 0 10px
+            }
         }
         .btnMenu {
             display: none;
