--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -1,3 +1,4 @@
+@import '../helpers/helpers.module.scss';
 @media screen and (min-width: 320px) {
     .section {
         width: 100%;
@@ -9,7 +10,7 @@
         flex-direction: column;
         align-items: center;
         padding: 0 0 50px 0;
-        height: calc(100vh - 90px);
+        min-height: calc(100vh - 90px);
         .title {
             width: 100%;
             font-size: 2rem;
