--- a/components/section04/style.module.scss
+++ b/components/section04/style.module.scss
@@ -5,7 +5,7 @@
         flex-direction: column;
         align-items: center;
         padding: 100px 0;
-        height: 100vh;
+        min-height: 100vh;
         .title {
             width: 100%;
             font-size: 2rem;
