--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -108,6 +108,11 @@
 @media screen and (min-width: 768px) {
     .section {
         width: 100%;
+        .actions {
+            input {
+                width: calc(50% - 20px);
+            }
+        }
         .container {
             padding: 10px;
             display: flex;
