--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -3,6 +3,7 @@
         width: 100%;
         display: flex;
         padding: 10px 0;
+
         .logo {
             width: 50%;
             height: 70px;
@@ -14,6 +15,7 @@
             }
         }
         .btnMenu {
+            cursor: pointer;
             width: 50%;
             height: 70px;
             background: #fff;
@@ -22,27 +24,31 @@
             background-size: 20px;
             background-position-x: 90%;
             background-position-y: center;
+            
         }
         .navigation {
-            display: none;
+            display: none;;
         }
         .menu {
+            cursor: pointer;
             position: absolute;
             top: 90px;
             width: 100%;
             display: none;
             background: #f4f4f4;
             padding: 10px;
-            cursor: pointer;
+            
             ul {
                 list-style-type: none;
                 padding: 0;
                 margin: 0;
                 text-align: center;
+                cursor: pointer;
 
                 li {
                     margin: 10px 0;
                     text-transform: uppercase;
+                    cursor: pointer;
                 }
             }
         }
@@ -70,9 +76,11 @@
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
+
                 li {
                     margin: 10px 0;
                     text-transform: uppercase;
+                    cursor: pointer;
                 }
             }
         }
