--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -9,6 +9,8 @@
         flex-direction: column;
         align-items: center;
         padding:0 0 50px 0;
+        min-height: calc(100vh - 90px);
+        
         .title {
             width: 100%;
             font-size: 2rem;
