--- a/components/section03/style.module.scss
+++ b/components/section03/style.module.scss
@@ -6,11 +6,11 @@
         background-size: cover;
         background-position: center;
         display: flex;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
         position: relative;
         padding:0 0 50px 0;
+        
         .divOpacity {
             opacity: 0.65;
             background-color: rgb(17, 17, 17);
@@ -43,7 +43,6 @@
                 color: #fff;
                 margin-top: 70px;
                 display: flex;
-                flex-direction: column;
                 align-items: center;
                 input {
                     width: calc(100% - 20px);
@@ -59,6 +58,10 @@
                     border: 2px solid #fff;
                     color: #fff;
                 }
+            }
+            .formBtn {
+                    display: flex;
+                    justify-content: space-around;
             }
         }
     }
