--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -24,6 +24,8 @@
             color: #fff;
             text-align: center;
             margin-top: 70px;
+            background: rgba($color: #000000, $alpha: 0.2);
+            padding: 0 10px 0 10px;
         }
         .actions {
             width: 100%;
