--- a/components/section05/style.module.scss
+++ b/components/section05/style.module.scss
@@ -5,7 +5,7 @@
         flex-direction: column;
         align-items: center;
         padding: 100px 0;
-        min-height: 100vh;
+        
         .title {
             width: 100%;
             font-size: 2rem;
@@ -24,7 +24,6 @@
         }
     }
 }
-
 @media screen and (min-width: 768px) {
     .section {
         width: 100%;
@@ -34,6 +33,8 @@
             flex-wrap: wrap;
             flex-direction: row;
             justify-content: space-around;
+            text-align: center;
+
         }
     }
 }
