--- a/components/section05/style.module.scss
+++ b/components/section05/style.module.scss
@@ -5,6 +5,7 @@
         flex-direction: column;
         align-items: center;
         padding: 100px 0;
+        min-height: 100vh;
         
         .title {
             width: 100%;
@@ -20,7 +21,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            text-align: center;
         }
     }
 }
