--- a/components/section02/style.module.scss
+++ b/components/section02/style.module.scss
@@ -20,6 +20,9 @@
             flex-wrap: wrap;
         }
     }
+    .hide {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 768px) {
