Novas imagens, titulos, textos e efeitos.

--- a/components/backToTop/style.module.scss
+++ b/components/backToTop/style.module.scss
@@ -1,16 +1,19 @@
 .btnTopo {
     a {
-        background: #9AAF42;
-        width: 45px;
+        background: rgb(154 175 66 / 60%);
+        width: 50px;
         height: 45px;
         position: fixed;
         z-index: 10;
         bottom: 0;
         right: 0;
+        display: -moz-box;
         display: flex;
-        margin: 10px;
+        justify-content: center;
+        margin: 0 10px 0 0;
         cursor: pointer;
-        border-radius: 100%;
-        box-shadow: #000 1px 1px 1px;
+        border-radius: 10px 10px 0 0;
+        /* -webkit-box-shadow: #000 1px 1px 1px; */
+        /* box-shadow: #000 1px 1px 1px; */
     }
 }
