--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -31,8 +31,12 @@
         .description {
             text-align: center;
         }
+        label {
+            display: block;
+            text-align: center;
+            margin: 15px 0 0 0;
+        }
     }
-
     .cardModel03 {
         width: calc(100% - 40px);
         margin: 10px;
@@ -40,7 +44,6 @@
         text-align: center;
         border: 1px solid #e5e5e5;
         border-radius: 5px;
-
         .iconImage {
             img {
                 width: 50px;
@@ -68,7 +71,6 @@
             text-align: justify;
         }
     }
-
     .cardModel03 {
         width: calc(50% - 20px);
         height: 300px;
@@ -83,7 +85,7 @@
     }
     .cardModel02 {
         width: calc(33.33% - 20px);
-        height: 300px;
+        height: 350px;
         p {
             text-align: justify;
         }
