--- a/components/section01/style.module.scss
+++ b/components/section01/style.module.scss
@@ -2,7 +2,7 @@
 @media screen and (min-width: 320px) {
     .section {
         width: 100%;
-        background-image: url(../../public/background-03.jpeg);
+        background-image: url(../../public/thinkia-img-02.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -23,8 +23,8 @@
             font-size: 1.125rem;
             color: #fff;
             text-align: center;
-            margin-top: 70px;
-            background: rgba($color: #000000, $alpha: 0.2);
+            margin-top: 73px;
+            background: rgba($color: #000000, $alpha: 0.5);
             padding: 0 10px 0 10px;
         }
         .actions {
