--- a/components/section04/style.module.scss
+++ b/components/section04/style.module.scss
@@ -6,6 +6,8 @@
         align-items: center;
         padding: 100px 0;
         min-height: 100vh;
+        background-color: #F5F5F5;
+        border-top: 2px solid #8BA426;
         .title {
             width: 100%;
             font-size: 2rem;
