--- a/components/section05/style.module.scss
+++ b/components/section05/style.module.scss
@@ -6,7 +6,8 @@
         align-items: center;
         padding: 100px 0;
         min-height: 100vh;
-        
+        background-color: #FFF;
+        border-top: 2px solid #8BA426;
         .title {
             width: 100%;
             font-size: 2rem;
@@ -24,6 +25,7 @@
         }
     }
 }
+
 @media screen and (min-width: 768px) {
     .section {
         width: 100%;
@@ -34,7 +36,6 @@
             flex-direction: row;
             justify-content: space-around;
             text-align: center;
-
         }
     }
 }
