--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -1,3 +1,4 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css);
 @media screen and (min-width: 320px) {
     .cardModel01 {
         width: 100%;
@@ -57,6 +58,36 @@
             text-align: center;
         }
     }
+    .cardModel04 {
+        width: calc(100% - 40px);
+        margin: 10px;
+        padding: 30px;
+        text-align: center;
+        border: 1px solid #e5e5e5;
+        border-radius: 5px;
+        .perfil {
+            img {
+                width: 100%;
+                height: 130px;
+            }
+        }
+        .description {
+            text-align: justify;
+        }
+        .title {
+            text-align: left;
+            color: #9aaf42;
+            font-weight: bold;
+            &::before {
+                font-size: 30px;
+                line-height: 40px;
+                display: block;
+                color: #e2ddd3;
+                font-family: FontAwesome;
+                content: "\f10d";
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -76,6 +107,17 @@
         height: 300px;
         text-align: center;
     }
+    .cardModel04 {
+        width: calc(100% - 20px);
+        height: 600px;
+        text-align: justify;
+        .perfil {
+            img {
+                width: 100%;
+                height: 300px;
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -94,5 +136,15 @@
         width: calc(25% - 20px);
         height: 200px;
         text-align: center;
+    }
+    .cardModel04 {
+        width: calc(33.33% - 20px);
+        text-align: justify;
+        .perfil {
+            img {
+                width: 100%;
+                height: 200px;
+            }
+        }
     }
 }
