--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -18,7 +18,7 @@
         .text {
             width: calc(100% - 40px);
             font-size: 1.125rem;
-            color: #777777;
+            color: #fff;
             margin: 10px 20px 0 20px;
             text-align: center;
         }
@@ -45,45 +45,72 @@
         }
         .container {
             padding: 10px;
-            justify-content: space-around;
-            .sideLeft {
-                .cheap {
+            width: 100%;
+            background-color: #9aaf42;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            .container_part {
+                width: 100%;
+                min-height: 250px;
+                .navigation {
                     ul {
+                        width: 100%;
                         list-style-type: none;
-                        margin: 0;
                         padding: 0;
-                        display: flex;
-                        justify-content: space-around;
+                        margin: 0;
                         li {
-                            .card {
-                                display: block;
-                                padding: 10px 0;
-                                cursor: pointer;
-                                img {
-                                    width: 50px;
+                            margin: 10px 0;
+                            text-transform: uppercase;
+                            cursor: pointer;
+                            color: #000;
+                            a {
+                                &:hover {
+                                    color: #000;
                                 }
                             }
                         }
                     }
                 }
             }
-            .sideRight {
-                width: 100%;
-                .title {
-                    text-align: center;
-                }
-                .text {
-                    text-align: justify;
-                }
-            }
-            .title {
-                span {
-                    font-size: 30px;
-                }
-            }
-            .text {
-                text-align: left;
-            }
+            // .sideLeft {
+            //     .cheap {
+            //         ul {
+            //             list-style-type: none;
+            //             margin: 0;
+            //             padding: 0;
+            //             display: flex;
+            //             justify-content: space-around;
+            //             li {
+            //                 .card {
+            //                     display: block;
+            //                     padding: 10px 0;
+            //                     cursor: pointer;
+            //                     img {
+            //                         width: 50px;
+            //                     }
+            //                 }
+            //             }
+            //         }
+            //     }
+            // }
+            // .sideRight {
+            //     width: 100%;
+            //     .title {
+            //         text-align: center;
+            //     }
+            //     .text {
+            //         text-align: justify;
+            //     }
+            // }
+            // .title {
+            //     span {
+            //         font-size: 30px;
+            //     }
+            // }
+            // .text {
+            //     text-align: left;
+            // }
         }
         .footer {
             background-color: $cor-complemento-secundario;
@@ -116,46 +143,75 @@
         .container {
             padding: 10px;
             display: flex;
-            justify-content: space-around;
-            .sideLeft {
-                width: 15%;
-                .cheap {
+            justify-content: space-between;
+            flex-direction: row;
+            text-align: left;
+            .container_part {
+                width: calc(33.33% - 20px);
+                min-height: 400px;
+                h2 {
+                    padding-left: 3px;
+                    border-left: 4px solid #fff;
+                }
+                .navigation {
                     ul {
-                        align-items: baseline;
-                        flex-direction: column;
+                        width: 100%;
                         list-style-type: none;
-                        margin: 0;
                         padding: 0;
+                        margin: 0;
+                        text-align: left;
                         li {
-                            .card {
-                                display: block;
-                                padding: 15px 0;
-                                cursor: pointer;
-                                img {
-                                    width: 50px;
+                            margin: 10px 0;
+                            text-transform: uppercase;
+                            cursor: pointer;
+                            a {
+                                &:hover {
+                                    color: #fff;
                                 }
                             }
                         }
                     }
                 }
             }
-            .sideRight {
-                width: 100%;
-                .title {
-                    text-align: center;
-                }
-                .text {
-                    text-align: center;
-                }
-            }
-            .title {
-                span {
-                    font-size: 30px;
-                }
-            }
-            .text {
-                text-align: left;
-            }
+            // .sideLeft {
+            //     width: 15%;
+            //     .cheap {
+            //         ul {
+            //             align-items: baseline;
+            //             flex-direction: column;
+            //             list-style-type: none;
+            //             margin: 0;
+            //             padding: 0;
+            //             li {
+            //                 .card {
+            //                     display: block;
+            //                     padding: 15px 0;
+            //                     cursor: pointer;
+            //                     img {
+            //                         width: 50px;
+            //                     }
+            //                 }
+            //             }
+            //         }
+            //     }
+            // }
+            // .sideRight {
+            //     width: 100%;
+            //     .title {
+            //         text-align: center;
+            //     }
+            //     .text {
+            //         text-align: center;
+            //     }
+            // }
+            // .title {
+            //     span {
+            //         font-size: 30px;
+            //     }
+            // }
+            // .text {
+            //     text-align: left;
+            // }
         }
         .footer {
             padding: 20px;
