--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -109,12 +109,31 @@
     }
     .cardModel04 {
         width: calc(100% - 20px);
-        height: 600px;
+        // height: 600px;
         text-align: justify;
         .perfil {
             img {
                 width: 100%;
                 height: 300px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .cardModel03 {
+        width: calc(50% - 20px);
+        height: 250px;
+        text-align: center;
+    }
+    .cardModel04 {
+        width: calc(33.33% - 20px);
+        text-align: justify;
+        // min-height: 630px;
+        .perfil {
+            img {
+                width: 100%;
+                height: 120px;
             }
         }
     }
@@ -134,7 +153,7 @@
     }
     .cardModel03 {
         width: calc(25% - 20px);
-        height: 200px;
+        // height: 200px;
         text-align: center;
     }
     .cardModel04 {
