--- a/components/section06/style.module.scss
+++ b/components/section06/style.module.scss
@@ -21,7 +21,7 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            // align-items: center;
         }
     }
 }
