criaçaõ de um carrousel

--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -66,6 +66,7 @@
         border: 1px solid #e5e5e5;
         border-radius: 5px;
         box-shadow: 1px 0px 5px rgb(119, 119, 119);
+        flex: none;
         .perfil {
             img {
                 width: 100%;
