--- a/components/section06/style.module.scss
+++ b/components/section06/style.module.scss
@@ -21,6 +21,30 @@
             width: 100%;
             display: flex;
             flex-direction: column;
+            .carousel {
+                display: flex;
+                overflow-x: hidden;
+                scroll-behavior: smooth;
+                 ::-webkit-scrollbar {
+                    display: none;
+                }
+            }
+            .buttons {
+                width: 100%;
+                text-align: center;
+                position: absolute;
+                margin-top: 25%;
+                display: flex;
+                justify-content: space-between
+            }
+            .buttons button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+            }
+            .buttons button:first-child img {
+                transform: rotate(180deg);
+            }
             // align-items: center;
         }
     }
@@ -35,6 +59,26 @@
             flex-wrap: wrap;
             flex-direction: row;
             justify-content: space-around;
+            .carousel {
+                display: flex;
+                overflow-x: hidden;
+                scroll-behavior: smooth;
+                 ::-webkit-scrollbar {
+                    display: none;
+                }
+            }
+            .buttons {
+                width: 100%;
+                text-align: center;
+            }
+            .buttons button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+            }
+            .buttons button:first-child img {
+                transform: rotate(180deg);
+            }
         }
     }
 }
