--- a/components/card/style.module.scss
+++ b/components/card/style.module.scss
@@ -172,4 +172,57 @@
             }
         }
     }
+    .cardModel05 {
+        background-color: #EFEFF0;
+        cursor: pointer;
+        width: 190px;
+        height: 230px;
+        // border-right: 1px solid #000;
+        padding: 10px 0 10px 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .head {
+            color: #fff;
+            border-right: 1px solid #000;
+        }
+        .title {
+            color: #0057B8;
+            font-size: 18px;
+            font-weight: bold;
+            border-right: 1px solid #000;
+        }
+        .description {
+            color: #000;
+            font-size: 10px;
+            border-right: 1px solid #000;
+            border-radius: 0!important;
+        }
+        &:hover {
+            background-color: #0057B8;
+            .title {
+                color: #fff;
+            }
+            .description {
+                color: #fff;
+            }
+        }
+        &:first-child {
+            border-top-left-radius: 8px;
+            border-bottom-left-radius: 8px;
+        }
+        &:last-child {
+            border-top-right-radius: 8px;
+            border-bottom-right-radius: 8px;
+            .head {
+                border: 0;
+            }
+            .title {
+                border: 0;
+            }
+            .description {
+                border: 0;
+            }
+        }
+    }
 }
